<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stocks Tracker</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_gainer">Gainers</string>
    <string name="title_loser">Losers</string>
    <string name="title_active">Actives</string>
    <string name="title_stock_info">Stock Info</string>

    <string name="exchangeName">Exchange: </string>
    <string name="lastPrice">Last Price: </string>
    <string name="priceChange">Price Change: </string>
    <string name="percentChange">Percent Change: </string>
    <string name="performanceID">Performance ID: </string>
    <string name="volume">Volume: </string>

    <string name="load_failed">Load Failed.</string>
    <string name="noInternet">No Internet Connection</string>

    <string name="graphicAccessibilityMessage">Percentage Graphic</string>

    <string name="sampleTicker">AMC</string>
    <string name="sampleLastPrice">$37.08</string>
    <string name="samplePriceChange">($10.04)</string>
    <string name="samplePercentageChange">37.1302%</string>
    <string name="sampleStanNameAndExchange">AMC Entertainment Holdings Inc Class A (XYNS)</string>

    <!-- Labels for StockInfoActivity Display -->
    <string name="ticker_key" translatable="false">ticker</string>
    <string name="ticker_default" translatable="false">AMC</string>

    <string name="lastPrice_key" translatable="false">Last Price</string>
    <string name="lastPrice_default" translatable="false">0.00</string>

    <string name="priceChange_key" translatable="false">Price Change</string>
    <string name="priceChange_default" translatable="false">0.00</string>

    <string name="percentageChange_key" translatable="false">Percent Change</string>
    <string name="percentageChange_default" translatable="false">0.0</string>

    <string name="stanName_key" translatable="false">Standard name</string>
    <string name="stanName_default" translatable="false">AMC Entertainment Holdings Inc Class A</string>

    <string name="exchangeStanName_key" translatable="false">Exchange name</string>
    <string name="exchangeStanName_default" translatable="false">AMC Entertainment Holdings Inc Class A (XNYS)</string>

    <string name="volume_key" translatable="false">Volume</string>
    <string name="volume_default" translatable="false">0</string>

    <string name="performanceID_key" translatable="false">Performance ID</string>
    <string name="performanceID_default" translatable="false">0</string>
</resources>