<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foregroundGravity="center_horizontal"
        app:cardBackgroundColor="@color/cardGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tickerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sampleTicker"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/white"
                android:textSize="75sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lastPriceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleLastPrice"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/priceChangeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/samplePriceChange"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/gainGreen" />

                <ImageView
                    android:id="@+id/arrowPriceGraphicView"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:contentDescription="@string/graphicAccessibilityMessage"
                    android:textColor="@color/white"
                    app:srcCompat="@mipmap/ic_gain_foreground" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/percentChangeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samplePercentageChange"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FF1919" />

                <ImageView
                    android:id="@+id/arrowPercentGraphicView"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/graphicAccessibilityMessage"
                    android:textColor="@color/white"
                    app:srcCompat="@mipmap/ic_loss_foreground" />

            </LinearLayout>

            <TextView
                android:id="@+id/stanNameAndExchangeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sampleStanNameAndExchange"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/volumeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/volume"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/performanceIdView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/performanceID"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"

                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>